--- a/.gitignore
+++ b/.gitignore
@@ -181,4 +181,4 @@ UpgradeLog*.htm
 
 # Microsoft Fakes
 FakesAssemblies/
-/Sources/Guestbook/Guestbook.API/ClientBin/Guestbook.Silverlight.xap
+/Sources/Guestbook/Guestbook.API/ClientBin/*
