enable database migrations in data layer

--- a/Sources/Guestbook/Guestbook.API/Guestbook.API.csproj
+++ b/Sources/Guestbook/Guestbook.API/Guestbook.API.csproj
@@ -74,6 +74,12 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Guestbook.Data\Guestbook.Data.csproj">
+      <Project>{07ee126c-bdaf-4d44-b840-a6262c6b8e03}</Project>
+      <Name>Guestbook.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
