--- a/Sources/Guestbook/Guestbook.Data/Guestbook.Data.csproj
+++ b/Sources/Guestbook/Guestbook.Data/Guestbook.Data.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataContext.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
