modify AsyncPagedCollectionView to use async/await paradigm to featch the messages.

--- a/Sources/Guestbook/Guestbook.Silverlight/Guestbook.Silverlight.csproj
+++ b/Sources/Guestbook/Guestbook.Silverlight/Guestbook.Silverlight.csproj
@@ -104,6 +104,8 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainPageViewModel.cs" />
+    <Compile Include="Tools\PagedDataResponse.cs" />
+    <Compile Include="Tools\AsyncPagedCollectionView.cs" />
     <Compile Include="Mvvm\ViewModel.cs" />
     <Compile Include="Network\GuestbookService.cs" />
     <Compile Include="Network\WebInvoker.cs" />
@@ -132,6 +134,7 @@
   <ItemGroup>
     <Resource Include="Content\Images\guestbook.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
