commit grid which should stretch items to full height

--- a/Sources/Guestbook/Guestbook.Silverlight/Guestbook.Silverlight.csproj
+++ b/Sources/Guestbook/Guestbook.Silverlight/Guestbook.Silverlight.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Network\GuestbookService.cs" />
     <Compile Include="Network\WebInvoker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\UniformGrid.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
