--- a/Sources/Guestbook/Guestbook.Silverlight/Guestbook.Silverlight.csproj
+++ b/Sources/Guestbook/Guestbook.Silverlight/Guestbook.Silverlight.csproj
@@ -104,6 +104,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainPageViewModel.cs" />
+    <Compile Include="Mvvm\RelayComand.cs" />
     <Compile Include="Tools\PagedDataResponse.cs" />
     <Compile Include="Tools\AsyncPagedCollectionView.cs" />
     <Compile Include="Mvvm\ViewModel.cs" />
@@ -117,6 +118,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
+    <Page Include="Content\Styles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
