--- a/Sources/Guestbook/Guestbook.API/Guestbook.API.csproj
+++ b/Sources/Guestbook/Guestbook.API/Guestbook.API.csproj
@@ -99,9 +99,11 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\CaptchaController.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Tools\CaptchaGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Guestbook.Data\Guestbook.Data.csproj">
