add captcha to post message request, handle captha on server side.

--- a/Sources/Guestbook/Guestbook.API/Guestbook.API.csproj
+++ b/Sources/Guestbook/Guestbook.API/Guestbook.API.csproj
@@ -54,6 +54,9 @@
     <Reference Include="Owin">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
+    <Reference Include="RijndaelEncryptDecrypt">
+      <HintPath>..\packages\RijndaelEncryptDecrypt.1.0.0.24384\lib\net40\RijndaelEncryptDecrypt.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -104,6 +107,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Tools\CaptchaGenerator.cs" />
+    <Compile Include="Tools\HttpContextExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Guestbook.Data\Guestbook.Data.csproj">
