--- a/Sources/Guestbook/Guestbook.Models/Guestbook.Models.csproj
+++ b/Sources/Guestbook/Guestbook.Models/Guestbook.Models.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Message.cs" />
     <Compile Include="MessageFilter.cs" />
     <Compile Include="MessageSearchResult.cs" />
+    <Compile Include="PostData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
