disable control buttons on isbusy

--- a/Sources/Guestbook/Guestbook.Silverlight/Guestbook.Silverlight.csproj
+++ b/Sources/Guestbook/Guestbook.Silverlight/Guestbook.Silverlight.csproj
@@ -106,6 +106,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainPageViewModel.cs" />
+    <Compile Include="Mvvm\InvertedBoolConverter.cs" />
     <Compile Include="Mvvm\RelayComand.cs" />
     <Compile Include="Tools\PagedDataResponse.cs" />
     <Compile Include="Tools\AsyncPagedCollectionView.cs" />
